{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 74,
  "lineage": "f2b1c3dd-2588-db6f-872d-27810fb00839",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:security-group/sg-00f9b5ee6298c9746",
            "description": "Allow traffic from Lambda and my IP to RDS/Proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f9b5ee6298c9746",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.34.114.134/32"
                ],
                "description": "Allow PostgreSQL from my IP (Terraform apply time)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034727e3380fae330"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bp-tracker-db-sg",
            "name_prefix": "",
            "owner_id": "767398145752",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-db-sg",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-db-sg",
              "Project": "bp-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "data.http.my_ip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:security-group/sg-034727e3380fae330",
            "description": "Allow outbound traffic from Lambda, allow inbound from API GW is handled by Lambda permissions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034727e3380fae330",
            "ingress": [],
            "name": "bp-tracker-lambda-sg",
            "name_prefix": "",
            "owner_id": "767398145752",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-lambda-sg",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-lambda-sg",
              "Project": "bp-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:network-acl/acl-04cb6c306b0571aaa",
            "default_network_acl_id": "acl-04cb6c306b0571aaa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04cb6c306b0571aaa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398145752",
            "subnet_ids": [
              "subnet-05003852754a972a6",
              "subnet-0c3d6f8718418b928",
              "subnet-0c8d2bea854b32628",
              "subnet-0d005db22b4f2647e"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:route-table/rtb-0c5418c246ec9fcdf",
            "default_route_table_id": "rtb-0c5418c246ec9fcdf",
            "id": "rtb-0c5418c246ec9fcdf",
            "owner_id": "767398145752",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:security-group/sg-06344dcf1b53961fb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06344dcf1b53961fb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398145752",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-default",
              "Project": "bp-tracker"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092a4b9475bac7338",
            "arn": "arn:aws:ec2:us-west-2:767398145752:elastic-ip/eipalloc-092a4b9475bac7338",
            "association_id": "eipassoc-055962bee635ba5e0",
            "domain": "vpc",
            "id": "eipalloc-092a4b9475bac7338",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04dd2a145bf270ab4",
            "private_dns": "ip-10-0-1-141.us-west-2.compute.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-52-13-68-50.us-west-2.compute.amazonaws.com",
            "public_ip": "52.13.68.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-us-west-2a",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-us-west-2a",
              "Project": "bp-tracker"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:internet-gateway/igw-0481eb837b3af1bcf",
            "id": "igw-0481eb837b3af1bcf",
            "owner_id": "767398145752",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc",
              "Project": "bp-tracker"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092a4b9475bac7338",
            "association_id": "eipassoc-055962bee635ba5e0",
            "connectivity_type": "public",
            "id": "nat-010aa6cd7d5a226e1",
            "network_interface_id": "eni-04dd2a145bf270ab4",
            "private_ip": "10.0.1.141",
            "public_ip": "52.13.68.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d005db22b4f2647e",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-us-west-2a",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-us-west-2a",
              "Project": "bp-tracker"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05230ad1a452acd7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-010aa6cd7d5a226e1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05230ad1a452acd7e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0481eb837b3af1bcf",
            "id": "r-rtb-00f785d3ee9cf5dcc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f785d3ee9cf5dcc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:route-table/rtb-05230ad1a452acd7e",
            "id": "rtb-05230ad1a452acd7e",
            "owner_id": "767398145752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010aa6cd7d5a226e1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private",
              "Project": "bp-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:route-table/rtb-00f785d3ee9cf5dcc",
            "id": "rtb-00f785d3ee9cf5dcc",
            "owner_id": "767398145752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0481eb837b3af1bcf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public",
              "Project": "bp-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0857373c0ea1d25e4",
            "route_table_id": "rtb-05230ad1a452acd7e",
            "subnet_id": "subnet-0c8d2bea854b32628"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce137add61a3d603",
            "route_table_id": "rtb-05230ad1a452acd7e",
            "subnet_id": "subnet-0c3d6f8718418b928"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dfaaba8cb7bd1f2",
            "route_table_id": "rtb-00f785d3ee9cf5dcc",
            "subnet_id": "subnet-0d005db22b4f2647e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cb907aa8c5496c",
            "route_table_id": "rtb-00f785d3ee9cf5dcc",
            "subnet_id": "subnet-05003852754a972a6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:subnet/subnet-0c8d2bea854b32628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8d2bea854b32628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398145752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private-us-west-2a",
              "Project": "bp-tracker",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private-us-west-2a",
              "Project": "bp-tracker",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:subnet/subnet-0c3d6f8718418b928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d6f8718418b928",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398145752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private-us-west-2b",
              "Project": "bp-tracker",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-private-us-west-2b",
              "Project": "bp-tracker",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:subnet/subnet-0d005db22b4f2647e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d005db22b4f2647e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398145752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public-us-west-2a",
              "Project": "bp-tracker",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public-us-west-2a",
              "Project": "bp-tracker",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:subnet/subnet-05003852754a972a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05003852754a972a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398145752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public-us-west-2b",
              "Project": "bp-tracker",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc-public-us-west-2b",
              "Project": "bp-tracker",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5ebfb7e69eec972"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767398145752:vpc/vpc-0b5ebfb7e69eec972",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04cb6c306b0571aaa",
            "default_route_table_id": "rtb-0c5418c246ec9fcdf",
            "default_security_group_id": "sg-06344dcf1b53961fb",
            "dhcp_options_id": "dopt-04ef708d47c052de7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5ebfb7e69eec972",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5418c246ec9fcdf",
            "owner_id": "767398145752",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc",
              "Project": "bp-tracker"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bp-tracker-vpc",
              "Project": "bp-tracker"
            }
          }
        }
      ]
    }
  ]
}